<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainMenuBackground">

    <de.headlinetwo.exit.customviews.CustomTextView
        android:id="@+id/customTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/main_menu_heading_background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/main_menu_landing_page_heading"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        app:layout_constraintBottom_toTopOf="@+id/main_menu_landing_page_big_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.headlinetwo.exit.customviews.CustomTextView
        android:id="@+id/main_menu_landing_page_big_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="40dp"
        android:text="@string/game_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="@+id/customTextView2"
        app:layout_constraintTop_toBottomOf="@+id/customTextView2" />

    <de.headlinetwo.exit.customviews.CustomTextView
        android:id="@+id/main_menu_landing_page_progress_bar_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/main_menu_landing_page_total_progress_info_text"
        app:layout_constraintStart_toStartOf="@+id/main_menu_landing_page_big_text_view"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_landing_page_big_text_view" />

    <ProgressBar
        android:id="@+id/level_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_landing_page_progress_bar_info_text_view" />

    <de.headlinetwo.exit.customviews.CustomButton
        android:id="@+id/main_menu_landing_page_about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button_press_effect"
        android:text="@string/main_menu_about_page_heading"
        app:layout_constraintEnd_toStartOf="@id/main_menu_consent_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <de.headlinetwo.exit.customviews.CustomButton
        android:id="@+id/main_menu_consent_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button_press_effect"
        android:text="@string/consent_menu_heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_menu_landing_page_play_button"
        app:layout_constraintStart_toEndOf="@+id/main_menu_landing_page_about_button"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <de.headlinetwo.exit.customviews.CustomButton
        android:id="@+id/main_menu_landing_page_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button_press_effect"
        android:text="@string/main_menu_level_selection_page_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_menu_consent_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>